; ModuleID = '/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/esp_supplicant/extr_esp_wpa2.c_eap_sm_rx_eapol.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/esp_supplicant/extr_esp_wpa2.c_eap_sm_rx_eapol.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.eap_sm = type { i32 }

@gEapSm = common dso_local global %struct.eap_sm* null, align 8
@ESP_FAIL = common dso_local global i32 0, align 4
@ESP_ERR_NO_MEM = common dso_local global i32 0, align 4
@SIG_WPA2_RX = common dso_local global i32 0, align 4
@WPA_ADDR_LEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32, i32*)* @eap_sm_rx_eapol to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @eap_sm_rx_eapol(i32* %0, i32* %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca %struct.eap_sm*, align 8
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  %11 = load %struct.eap_sm*, %struct.eap_sm** @gEapSm, align 8
  store %struct.eap_sm* %11, %struct.eap_sm** %10, align 8
  %12 = load %struct.eap_sm*, %struct.eap_sm** %10, align 8
  %13 = icmp ne %struct.eap_sm* %12, null
  br i1 %13, label %16, label %14

14:                                               ; preds = %4
  %15 = load i32, i32* @ESP_FAIL, align 4
  store i32 %15, i32* %5, align 4
  br label %22

16:                                               ; preds = %4
  %17 = load i32*, i32** %6, align 8
  %18 = load i32*, i32** %7, align 8
  %19 = load i32, i32* %8, align 4
  %20 = load i32*, i32** %9, align 8
  %21 = call i32 @eap_sm_rx_eapol_internal(i32* %17, i32* %18, i32 %19, i32* %20)
  store i32 %21, i32* %5, align 4
  br label %22

22:                                               ; preds = %16, %14
  %23 = load i32, i32* %5, align 4
  ret i32 %23
}

declare dso_local i32 @eap_sm_rx_eapol_internal(i32*, i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
